<resources>
    <string name="app_name">FinanceApp</string>
    <string name="ticker">TICKER</string>
    <string name="company_name">Company name</string>
    <string name="last_bid_price">Price</string>
    <string name="price_change">Price change</string>
    <string name="limit_error">Api limit reached.Please try again later</string>
    <string name="access_denied">Access denied</string>
    <string name="stocks_name">Stocks</string>
    <string name="favorite_name">Favourite</string>
    <string name="queries_name">Queries</string>
    <string name="summary_name">Summary</string>
    <string name="chart_name">Chart</string>
    <string name="news_name">News</string>
    <string name="forecasts_name">Forecasts</string>
    <string name="peers_name">Peers</string>
    <string name="peers_tickers">peers tickers</string>
    <string name="peers_list">peers lsit</string>
    <string name="query_label">Enter ticker, name, isin, or cusip</string>
    <string name="popular_requests">Popular requests</string>
    <string name="recent_requests">You\'ve searched for this</string>
    <string name="day_chip">&#160;D&#160;</string>
    <string name="week_chip">&#160;W&#160;</string>
    <string name="two_weeks_chip">2W</string>
    <string name="month_chip">&#160;M&#160;</string>
    <string name="six_month_chip">6M</string>
    <string name="year_chip">&#160;Y&#160;</string>
    <string name="news_title">news</string>
    <string name="news_summary">News summary</string>
    <string name="news_source">News source</string>
    <string name="news_time">Recently</string>
    <string name="choose_news_opener">Choose where open news</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="week">week</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="ago">ago</string>
    <string name="recommendation_trend">recommendation trend</string>
    <string name="site">Site:</string>
    <string name="phone">Phone:</string>
    <string name="share_outstanding">Shares outstanding:</string>
    <string name="market_capitalization">Market capitalization:</string>
    <string name="ipo_date">IPO date:</string>
    <string name="industry">Industry:</string>
    <string name="Reload">Reload</string>
    <string name="internet_issues">Check your internet connection</string>
    <string name="swipe_to_refresh_message">Swipe down to refresh</string>
    <string name="plural_ending">s</string>
    <string name="load_error_msg">Couldn\'t load %1s</string>
    <string name="candle_data">candle data</string>
    <string name="companies">companies</string>
    <string name="companies_from_local_storage">companies from local storage</string>
    <string name="recent_queries">recent queries</string>
    <string name="strong_sell">Strong sell</string>
    <string name="sell">Sell</string>
    <string name="hold">Hold</string>
    <string name="buy">Buy</string>
    <string name="strong_buy">Strong buy</string>
    <string name="error_502">Api error</string>
</resources>