<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/chart_swipterefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/candles_chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.mikephil.charting.charts.CandleStickChart
            android:id="@+id/candle_stick_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:foregroundTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/candles_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/day_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:text="@string/day_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"
            app:chipMinHeight="@dimen/chip_size"
            app:minWidth = "@dimen/chip_size"
            tools:text="@string/day_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/week_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:padding="16dp"
            android:text="@string/week_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"
            app:chipMinHeight="@dimen/chip_size"
            tools:text="@string/week_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/two_weeks_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:padding="16dp"
            android:text="@string/two_weeks_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"
            app:chipMinHeight="@dimen/chip_size"
            tools:text="@string/two_weeks_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/month_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:includeFontPadding="true"
            android:padding="16dp"
            android:text="@string/month_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"

            app:chipMinHeight="@dimen/chip_size"
            tools:text="@string/month_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/six_month_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipMinHeight="@dimen/chip_size"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:padding="16dp"
            android:text="@string/six_month_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"
            tools:text="@string/six_month_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/year_chip"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipMinHeight="@dimen/chip_size"
            android:backgroundTint="@drawable/candle_chip_background"
            android:checkable="true"
            android:padding="16dp"
            android:text="@string/year_chip"
            android:textColor="@drawable/candle_chip_fontcolor"
            app:checkedIconVisible="false"
            app:chipCornerRadius="12dp"
            tools:text="@string/year_chip" />

    </com.google.android.material.chip.ChipGroup>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="128dp" />


</androidx.constraintlayout.widget.ConstraintLayout>