<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardElevation = "0dp"
            app:layout_scrollFlags="enterAlways|scroll|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="16dp" />

                <ImageView
                    android:id="@+id/profile_arrowback"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/ic_arrow_back"
                    android:foregroundGravity="left|center"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/profile_ticker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker"
                    android:textColor="@color/font_black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/profile_star"
                    app:layout_constraintStart_toEndOf="@+id/profile_arrowback"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/profile_companyname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/company_name"
                    android:textColor="@color/font_black"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/profile_star"
                    app:layout_constraintStart_toEndOf="@+id/profile_arrowback"
                    app:layout_constraintTop_toBottomOf="@+id/profile_ticker" />

                <ImageView
                    android:id="@+id/profile_star"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:foreground="@drawable/ic_star_outline_24px"
                    android:foregroundGravity="center|right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline3"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chart_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/chart_name"
                    android:textColor="@color/font_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/summary_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/summary_name"
                    android:textColor="@color/font_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/news_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/news_name"
                    android:textColor="@color/font_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forecasts_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/forecasts_name"
                    android:textColor="@color/font_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>
        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/company_profile_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>