<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:cardCornerRadius="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/search_bar_arrow_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/standard_margin"
                android:background="@drawable/ic_arrow_back"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_bar_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/query_label"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:textColor="@color/font_black"
                android:textColorHint="@color/font_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_bar_arrow_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search_bar_delete_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_close"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/search_bar_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.488" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/stocks_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_weight="0"
        android:text="@string/stocks_name"
        android:textColor="@color/font_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/search_viewpager"
        app:layout_constraintEnd_toStartOf="@+id/favourites_textview2"
        app:layout_constraintStart_toEndOf="@+id/queries_textview" />

    <TextView
        android:id="@+id/queries_textview"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:gravity="bottom|center"
        android:text="@string/queries_name"
        android:textColor="@color/font_black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/favourites_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_weight="0"
        android:text="@string/favorite_name"
        android:textColor="@color/font_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/search_viewpager"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/search_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/queries_textview"
        tools:layout_editor_absoluteX="156dp">

    </androidx.viewpager2.widget.ViewPager2>

</androidx.constraintlayout.widget.ConstraintLayout>